--- a/ref/builtin_specifications.html
+++ b/ref/builtin_specifications.html
@@ -576,11 +576,11 @@ provided instead</p>
 </div></blockquote>
 <p><strong>mode</strong></p>
 <blockquote>
-<div><p>Either ‘best_codon’ or ‘harmonized’. For ‘best_codon’, the optimization
-will always replace a codon with the most-frequent triplet possible.
-For ‘harmonized’, the optimization will bring the relative frequencies of
-the different triplets as close as possible to the frequencies in the
-reference species.</p>
+<div><p>Either ‘best_codon’ or ‘harmonized_frequencies’. For ‘best_codon’, the
+optimization will always replace a codon with the most-frequent triplet
+possible. For ‘harmonized_frequencies’, the optimization will bring the
+relative frequencies of the different triplets as close as possible to
+the frequencies in the reference species.</p>
 </div></blockquote>
 <p><strong>location</strong></p>
 <blockquote>
