--- a/_modules/dnachisel/builtin_specifications/AvoidBlastMatches.html
+++ b/_modules/dnachisel/builtin_specifications/AvoidBlastMatches.html
@@ -252,7 +252,7 @@
 
 
 <div class="viewcode-block" id="AvoidBlastMatches"><a class="viewcode-back" href="../../../ref/builtin_specifications.html#dnachisel.builtin_specifications.AvoidBlastMatches">[docs]</a><span class="k">class</span> <span class="nc">AvoidBlastMatches</span><span class="p">(</span><span class="n">Specification</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;Enforce that the given pattern is absent in the sequence.</span>
+    <span class="sd">&quot;&quot;&quot;Enforce that the sequence has no BLAST matches with a given database.</span>
 
 <span class="sd">    WARNING: try using AvoidMatches instead, it is much better!!</span>
 
